--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,6 +16,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Docker
+          file: ./Dockerfile
           push: true
           tags: ghrc.io/alplabdevelop/edu_prometheus_devops:latest
