--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,21 +1,34 @@
-name: Build and Push Docker Image
+name: cicd
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches: 
-      - main
+    branches: [ main ]
+
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build and Push Docker Image
+      - uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: alplabdevelop
+          password: SHA256:9Rn8TJk6CmjX7pyjbnSNk7oK2b9zcLcoY5/vPsYPBMs
+      - name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Docker
+          file: ./Dockerfile
           push: true
-          tags: ghrc.io/alplabdevelop/edu_prometheus_devops:latest
+          tags: ghrc.io/alplabdevelop/edu_prometheus_devops:SHA256:9Rn8TJk6CmjX7pyjbnSNk7oK2b9zcLcoY5/vPsYPBMs
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
